<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blueye_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sam@todo.todo">sam</maintainer>
  <license>TODO: License declaration</license>

  <depend>nav2_bringup</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>slam_toolbox</depend>
  <depend>robot_localization</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rviz2</depend>
  <depend>navigation2_rviz_plugins</depend>
  <depend>teleop_twist_keyboard</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
